envoy/accesslog/stats/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.stats
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stats.v3.Config
                      stat_prefix: ingress_http_al
                      counters:
                        - stat:
                            name: request_count
                            tags:
                              - name: response_code
                                value_format: "%RESPONSE_CODE%"
                              - name: cluster
                                value_format: "%UPSTREAM_CLUSTER%"
                          value_fixed:
                            value: 1
                      histograms:
                        - stat:
                            name: response_duration_ms
                            tags:
                              - name: response_code
                                value_format: "%RESPONSE_CODE%"
                          unit: Milliseconds
                          value_format: "%DURATION%"
                        - stat:
                            name: response_bytes
                            tags:
                              - name: response_code
                                value_format: "%RESPONSE_CODE%"
                          unit: Bytes
                          value_format: "%BYTES_SENT%"
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/cluster1"
                          route:
                            cluster: cluster1
                            timeout: 3600s
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_1
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "reply from listener_1\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: cluster1
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      metadata:
        filter_metadata:
          envoy.lb:
            version: "1"
      load_assignment:
        cluster_name: cluster1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10001
